# buildtooling

./: count-file-importance.py  count-header-importance.py  create-project-environment.py
Bazel/: Dockerfile  USAGE.md
Dockerfile-Templates/Project-llvmcfe/: Dockerfile
Dockerfile-Templates/Project-llvmcfe/dynamic-x86-debug/: Dockerfile
Dockerfile-Templates/Project-llvmcfe/static-all-realease/: Dockerfile
Dockerfile-Templates/Project-none/: Dockerfile  Makefile  hello.c  make
Dockerfile-Templates/Project-xerces/: Dockerfile
Dockerfile-Templates/Project-xerces/default/: Dockerfile
Dockerfile-Templates/Tooling-ccache/: Dockerfile
Dockerfile-Templates/Tooling-distcc/: Dockerfile  distcc-welcome.sh
Dockerfile-Templates/Tooling-distcc-worker/: Dockerfile  start-distcc.sh
Dockerfile-Templates/UseCompiler-clang/: Dockerfile
Dockerfile-Templates/UseCompiler-gcc/: Dockerfile
Dockerfile-Templates/UseCompiler-zapcc/: Dockerfile
Dockerfile-Templates/basics/: Dockerfile
Dockerfiles/Project-llvmcfe/dynamic-x86-debug/: Dockerfile
Dockerfiles/Project-llvmcfe/static-all-release/: Dockerfile
Dockerfiles/Project-none/: Dockerfile
Dockerfiles/Project-xerces/: Dockerfile
Dockerfiles/Project-xerces-modules/: Dockerfile
Dockerfiles/Project-xerces-modules/default/: Dockerfile
Dockerfiles/Tooling-distcc/: distcc-hosts  distcc-welcome.sh
Dockerfiles/Tooling-distcc-worker/: start-distcc.sh
Dockerfiles/UseCompiler-clang/: Dockerfile
Dockerfiles/UseCompiler-zapcc/: Dockerfile
Modules/: Modules.cmake  __main__.py  create-cppm-for-all-tus.sh  create-cppm-for-files-cli.sh  create-cppm-from-filelist-in-tree.sh  create-cppm-from-filelist.sh  fix-includes.py  random-cppms.py  random-experiment.sh  setup.cfg
Modules/ModulesTSMaker/: __init__.py  cycle_resolution.py  include.py  mapping.py  util.py
Modules/SymbolAnalyser/: CMakeLists.txt  Executor.cpp  Executor.h  ImplementsEdges.cpp  ImplementsEdges.h  Replacement.cpp  Replacement.h  SymbolTableDump.cpp  SymbolTableDump.h  Test.cpp  Test.h  TheFinder.cpp  TheFinder.h  main.cpp
Modules/SymbolAnalyser/tests/: DeclarationRewriting.cpp  ImplementsRelation.cpp  ImplementsWriting.cpp  MatchProblematicDeclarations.cpp  NontrivialIncludeFlags.cpp  RenameWriting.cpp  UsagePoints.cpp
Modules/SymbolRewriter/: .gitignore  CMakeLists.txt  Executor.cpp  Executor.h  ImplementsEdges.cpp  ImplementsEdges.h  LockedFile.cpp  LockedFile.h  Replacement.cpp  Replacement.h  SymbolTableDump.cpp  SymbolTableDump.h  Test.cpp  Test.h  TheFinder.cpp  TheFinder.h  main.cpp
Modules/SymbolRewriter/tests/: DeclarationRewriting.cpp  ImplementsRelation.cpp  ImplementsWriting.cpp  MatchProblematicDeclarations.cpp  RenameWriting.cpp  UsagePoints.cpp
Modules/passes/: __init__.py  clean_forward_declarations.py  emit_cmake_module_directives.py  execute_symbol_analyser.py  execute_symbol_rewriter.py  fetch_dependency_includes.py  join_implementation_cycles.py  load_implements_relations.py  load_module_affected_symbol_table.py  load_module_mapping.py  move_forward_declarations_to_defining_module.py  move_implementation_files_to_new_modules.py  parse_include_paths_from_cdb.py  remove_lines_from_source.py  rename_conflicting_symbols.py  solve_potential_module_import_cycles.py  write_module_files.py
Modules/stages/: __init__.py  emit_cmake_module_directives.py  execute_symbol_rewriter.py  fetch_dependency_includes.py  fetch_dependency_includes_from_headers.py  join_implementation_cycles.py  load_implements_relations.py  load_module_mapping.py  move_implementation_files_to_new_modules.py  rename_conflicting_symbols.py  solve_potential_module_import_cycles.py  write_module_files.py
Modules/utils/: __init__.py  graph.py  graph_visualisation.py  logging.py  progress_bar.py
Modules/utils/graph_visualisation/: __init__.py  actual.py  dummy.py
PCH/: Dockerfile
PCH/llvm_image/: Dockerfile
PCH/test_cmake_image/: Dockerfile
PCH/test_cmake_image/source/: CMakeLists.txt  factorial.h  header.h
PCH/test_image/: Dockerfile  sample.h
PCH/test_image/direct/: chain.cpp  chain.h  compile-gcc.sh  compile.sh  header.h  header2.h  implementation.cpp  source.cpp
ccache/: Dockerfile
ccache/llvm_image/: Dockerfile
ccache/test_image/: Dockerfile
ccache/test_image/source/: CMakeLists.txt  fibonacci.h  impl.cpp  main.cpp  template.cpp
distcc/: Dockerfile  start-distcc.sh  usage.md
distcc/llvm_image/: Dockerfile
zapcc/: Dockerfile  build-zapcc.sh
zapcc/llvm_image/: Dockerfile
